<resources>
    <string name="app_name">Color Picker</string>
    <string name="red_value">00</string>
    <string name="green_value">00</string>
    <string name="blue_value">00</string>
    <string name="color_value">#000000</string>
    <string name="red_label">Red:</string>
    <string name="green_label">Green:</string>
    <string name="blue_label">Blue:</string>
    <string name="color_name">New Color</string>
    <string name="action_load">Load</string>
    <string name="action_save">Save</string>
    <string name="button_send">Send Color</string>
</resources>
